# system-notifiers

./: Cargo.toml  readme.md
src/: audio_notif.rs  battery_notif.rs  config.rs  main.rs  single_notif.rs
