[package]
name = "system-notifiers"
version = "0.1.0"
edition = "2021"

[dependencies]
acpid_plug = "0.1.2"
anyhow = "1.0.86"
async-stream = "0.3.5"
battery = "0.7.8"
brightness = "0.5.0"
env_logger = "0.11.3"
futures = "0.3.30"
futures-util = "0.3.30"
libpulse-binding = "2.28.1"
notify = "6.1.1"
notify-rust = { version = "4.11.0", featurs = ["images"] }
pipewire = "0.8.0"
tokio = { version = "1.38.1", features = ["full"] }
tokio-stream = "0.1.15"
